--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "homepage": "https://allianatenadu.github.io/Recipe-love"
   },
   "dependencies": {
     "react": "^18.3.1",
