--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "homepage": "https://allianatenadu.github.io/Recipe-love"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
